--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <title>Soolar</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Solaar производит ароматные и полезные ореховые пасты в солнечном Кыргызстане. Южные регионы славятся своими орехами.">
-    <meta name="keywords" content="Solaar, Кыргызстан, ореховые пасты, полезные продукты, пасты из орехов">
+    <meta name="description" content="Solaar производит ароматные и полезные ореховые пасты в солнечном Кыргызстане. Южные регионы славятся своими орехами. В ассортименте есть 11 видов ореховых паст, дробленые орешки, а также мука. Отсутствие в наших пастах любых добавок (красителей, стабилизаторов, консервантов, ароматизаторов) позволяет сохранить энергетическую и пищевую ценность, по сравнению с аналогами представленными на рынке">
+    <meta name="keywords" content="Solaar, Кыргызстан, ореховые пасты, полезные продукты, пасты из орехов, арахисовая паста хрустящая, паста из грецкого ореха, тахини, Паста из тыквенных семечек, Миндальная паста, Кокосовая паста, Фундучная паста, Паста кешью, Фисташковая паста, Паста из пекана">
     <meta name="author" content="Solaar">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Soolar">
-    <meta property="og:description" content="Solaar производит
-    ароматные и полезные ореховые пасты в солнечном Кыргызстане,
-    славящемся своими питательными орехами.">
+    <meta property="og:description" content="Бренд Solaar производится в солнечной стране опоясанной высокими горами Кыргызстан. Южные края славятся вкусными и питательными орехами, что стала причиной создания компании, которая занимается производством ароматных и полезных ореховых паст.">
     <meta property="og:image" content="http://35.183.81.168:80/back_media/news_images/soolar.png">
 
   </head>
