--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="src/UI/Typography/fonts/stylesheet.css">
 
+    <link rel="icon" href="https://orehi.kg/back_static/sun.svg" type="image/x-icon">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Soolar</title>
@@ -17,8 +19,11 @@
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Soolar">
-    <meta property="og:description" content="Бренд Solaar производится в солнечной стране опоясанной высокими горами Кыргызстан. Южные края славятся вкусными и питательными орехами, что стала причиной создания компании, которая занимается производством ароматных и полезных ореховых паст.">
-    <meta property="og:image" content="http://35.183.81.168:80/back_media/news_images/soolar.png">
+    <meta property="og:description" content="Бренд Solaar производится в солнечной стране опоясанной высокими горами Кыргызстана. Южные края славятся вкусными и питательными орехами, что стала причиной создания компании, которая занимается производством ароматных и полезных ореховых паст.">
+    <meta property="og:image" content=" https://orehi.kg/back_static/icon.svg">
+    <meta name="robots" content="index, follow">
+    <meta name="google" content="notranslate">
+    <link rel="canonical" href="https://orehi.kg/">
 
   </head>
   <body>
