fix: fix Logo in Footer

--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 
     <link rel="stylesheet" href="src/UI/Typography/fonts/stylesheet.css">
 
-    <link rel="icon" href="https://orehi.kg/back_static/sun.svg" type="image/x-icon">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Soolar</title>
+    <title>Solaar</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Solaar производит ароматные и полезные ореховые пасты в солнечном Кыргызстане. Южные регионы славятся своими орехами. В ассортименте есть 11 видов ореховых паст, дробленые орешки, а также мука. Отсутствие в наших пастах любых добавок (красителей, стабилизаторов, консервантов, ароматизаторов) позволяет сохранить энергетическую и пищевую ценность, по сравнению с аналогами представленными на рынке">
@@ -20,10 +18,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Soolar">
     <meta property="og:description" content="Бренд Solaar производится в солнечной стране опоясанной высокими горами Кыргызстана. Южные края славятся вкусными и питательными орехами, что стала причиной создания компании, которая занимается производством ароматных и полезных ореховых паст.">
-    <meta property="og:image" content=" https://orehi.kg/back_static/icon.svg">
+    <meta property="og:image" content="https://orehi.kg/back_static/icon.svg">
     <meta name="robots" content="index, follow">
     <meta name="google" content="notranslate">
     <link rel="canonical" href="https://orehi.kg/">
+
 
   </head>
   <body>
